# Buildathon-Project5

./: .env.example  .gitignore  .replit  README.md  package-lock.json  pyproject.toml  requirements.txt  run.py  serve_frontend.py  setup.py  test_upload_and_qa.py
.trae/documents/: neo4j-graph-library-architecture.md  neo4j-graph-library-prd.md
attached_assets/: Pasted-You-are-an-expert-full-stack-engineer-building-an-MVP-in-Replit-Update-the-design-to-use-Neo4j--1755379189321_1755379189329.txt  Pasted-You-are-an-expert-full-stack-engineer-building-an-MVP-in-Replit-Update-the-design-to-use-Neo4j--1755379208000_1755379208000.txt
backend/: __init__.py  config.py  graph_ops.py  ingest.py  main.py  neo4j_store.py  nlp.py  qa.py  retrieval.py
examples/: README.md  VECTOR_DATABASE_GUIDE.md  advanced_usage.py  basic_usage.py  requirements_vector_example.txt  simple_vector_database_example.py  vector_database_example.py  vector_demo.py
frontend/: index.html
neo4j_graph_lib/: __init__.py  connection.py  crud_operations.py  query_engine.py  schema_manager.py
tests/: __init__.py  conftest.py  test_connection.py  test_crud_operations.py  test_integration.py  test_query_engine.py  test_schema_manager.py
